# Embedded-python-inside-c-

./: CMakeLists.txt  README.md  main.cpp
